--- a/vscode_workspace_1/cargo_workspace/packages/executables/exe_16/Cargo.toml
+++ b/vscode_workspace_1/cargo_workspace/packages/executables/exe_16/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2021"
 
 [dependencies]
 rand = "^0.8.5"
-futures = "^0.3.28"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 # lib_14 = { path = "../../libraries/lib_14" }
 
 # [dev-dependencies]
